<resources>

    <string name="app_name">Pow! Comics Reader</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_go_location">Go to</string>
    <string name="title_activity_main">Pow! Comics Reader</string>
    <string name="title_activity_preferences">Settings</string>
    <string name="prefs_comics_directory">Comics directory</string>
    <string name="prefs_general">General</string>
    <string name="prefs_dim_status_bar">Dim status bar</string>
    <string name="file_progress_info">%1$d of %2$d (%3$d%%)</string>
    <string name="menu_rescan">Reload</string>
    <string name="tab_all_comics">All comics</string>
    <string name="tab_unread">Unread</string>
    <string name="tab_read">Finished</string>
    <string name="dialog_need_prefs_message">Please configure base directory for comics archives.</string>
    <string name="dialog_need_prefs_preferences">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="comics_directory_default">/mnt/sdcard/Comics</string>
    <string name="prefs_reading">Reading</string>
    <string name="prefs_dark_theme">Use dark theme</string>
    <string name="dialog_open_location">Open location</string>
    <string name="dialog_location_beginning">Beginning</string>
    <string name="dialog_location_furthest">Furthest read location</string>
    <string name="dialog_location_location">Location…</string>
    <string name="dialog_location_end">End</string>
    <string name="tab_unfinished">Unfinished</string>
    <string name="menu_share">Share</string>
    <string name="prefs_use_full_screen">Fullscreen mode</string>
    <string name="error_could_not_prepare_file_for_sharing">Could not prepare file for sharing</string>
    <string name="error_could_not_open_comic_archive">Could not open comic archive.</string>
    <string name="error_out_of_memory">Out of memory</string>
    <string name="error_loading_image">Error loading image</string>
    <string name="error_could_not_read_folder_contents_">Could not read folder contents.</string>
    <string name="picker_choose">Choose %1$s</string>
    <string name="dialog_location_page_number">%1$d of %2$d</string>
    <string name="sync_server_has_further_page">You are currently on page %1$d. Furthest read page stored on the server is %2$d. Open it instead?</string>
    <string name="dialog_open_page">Open page</string>
    <string name="menu_sync_location">Sync to last page read</string>
    <string name="share_comic">Share comic</string>
    <string name="choose">Choose</string>
    <string name="error_no_comic_arhives_found_">No comic arhives found.</string>
    <string name="prefs_use_position_sync">Sync last read pages</string>
    <string name="prefs_use_position_sync_summary">Requires at least one Google account on the device. No personally identifiable information is sent.</string>
    <string name="error_sync_no_account">No Google account found, sync disabled.</string>
    <string name="sync_uploading">Uploading sync data…</string>
    <string name="error_sync_no_data">No information stored or you are on the furthest read page.</string>
    <string name="dialog_clear_data">Clear data</string>
    <string name="dialog_clear_data_title">Clear all remotely stored sync data?</string>
    <string name="prefs_sync">Sync</string>
    <string name="prefs_clear_sync_data">Clear sync data</string>
    <string name="prefs_clear_sync_data_summary">Removes all remotely stored sync data.</string>
    <string name="open_parent">Open parent</string>
    <string name="prefs_enable_rar_archives">Enable RAR archives</string>
    <string name="prefs_enable_rar_summary">Using RAR (CBR) files is not recommended because of underlying RAR library issues. If you experience crashes, disable this option, and repack your archives as ZIP.</string>
    <string name="file_unread">Unread (%1$d pages)</string>
    <string name="file_finished">Finished</string>
    <string name="menu_toggle_orientation_lock">(Un)lock orientation</string>
    <string name="prefs_comics_directory_summary">Base directory for comic archives.</string>
    <string name="prefs_fit_to_width">Fit to width</string>
    <string name="menu_donate">Donate</string>
    <string name="sync_running_in_test_mode">Sync running in test mode.</string>
    <string name="reset_remove_synced_progress">Would you like to remove synced progress too?</string>
    <string name="error_cant_open_file">Can\'t open file: %1$s</string>
</resources>