<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/prefs_general" >
        <EditTextPreference
            android:key="comics_directory"
            android:hint="@string/comics_directory_default"
            android:title="@string/prefs_comics_directory" >
        </EditTextPreference>
    </PreferenceCategory>
        	
    <PreferenceCategory android:title="@string/prefs_reading" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="use_dark_theme"
            android:title="@string/prefs_dark_theme" />
        
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="dim_status_bar"
            android:title="@string/prefs_dim_status_bar" />
        
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="use_full_screen"
            android:title="@string/prefs_use_full_screen" />
        
	</PreferenceCategory>
</PreferenceScreen>