<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/menu_share"
        android:title="@string/menu_share"
        android:icon="@drawable/ic_share_light"
        android:showAsAction="ifRoom" />
    
    <item android:id="@+id/menu_go_location"
        android:title="@string/menu_go_location"
        android:showAsAction="never" />
    
    <item android:id="@+id/menu_sync_location"
        android:title="@string/menu_sync_location"
        android:showAsAction="never" />
    
    <item android:id="@+id/menu_toggle_orientation_lock"
        android:title="@string/menu_toggle_orientation_lock"
        android:showAsAction="never" />
    
</menu>
